--- a/src/aim3/latent-kinematics-space.tex
+++ b/src/aim3/latent-kinematics-space.tex
@@ -2,37 +2,37 @@ In the field of Natural Language Processing (NLP), the concept of a `latent spac
 For instance, in NLP, words are transformed into vectors in a high-dimensional space, where the distances and directions between these vectors capture the subtle relationships and contextual nuances of language.
 This transformation enables algorithms to `understand' and process language in a way that mirrors human comprehension.
 
-Drawing a parallel to kinematics, we can view each movement pattern as a `sentence' composed of `words' that are the discrete kinematic data points (such as angles, velocities, and accelerations).
+Drawing a parallel to kinematics, each movement pattern can be viewed as a `sentence' composed of `words' that are the discrete kinematic data points (such as angles, velocities, and accelerations).
 Just as sentences in language express complex ideas constructed from simpler words, movement patterns in kinematics are complex expressions composed of simpler biomechanical elements.
 These elements interact in a high-dimensional `kinematic space,' analogous to the latent space in NLP.
-The goal of our kinematics translator, then, is akin to a language translator in NLP.
-It seeks to understand the `grammar' of movement in this latent space, allowing us to translate one set of movements (like walking) into another (like stair climbing), based on their underlying biomechanical structure.
-This could enable clinicians to infer a wide range of kinematic patterns from a limited set of observed movements, much like how a skilled linguist might infer meaning from a limited set of words or sentences.
+The goal of a kinematics translator, then, is akin to a language translator in NLP.
+It seeks to understand the `grammar' of movement in this latent space, allowing for the translation of one set of movements (like walking) into another (like stair climbing), based on their underlying biomechanical structure.
+This could enable clinicians to infer a wide range of kinematic patterns from a limited set of observed movements.
 
 
 \subsection{Brief Mathematical Preliminary and Notation}
 Let $\mathfrak{X}_{mvt}$ be the ambient kinematics space from which a particular sample is measured, where $mvt \in \{\text{stair},\text{walk}, \text{lunge}, \cdots\}$.
 Essentially, this is the space of all possible kinematics patterns for a particular movement.
-For simplicity, we can assume that this space $\mathfrak{X}_{mvt}$ follows some distribution, $\mu_{mvt}$.
-The ``latent space'' of our kinematics is $\mathfrak{Z}$ and follows some fixed distribution, $\xi$.
+For simplicity, let's assume that this space $\mathfrak{X}_{mvt}$ follows some distribution, $\mu_{mvt}$.
+The ``latent space'' of the kinematics is $\mathfrak{Z}$ and follows some fixed distribution, $\xi$.
 For a universal translator, wherein the expressiveness of outputs resembles the underlying musculoskeletal system of that particular patient, you would not have a latent space for each movement, ($\mathfrak{Z}_{mvt}$), but rather, the single latent space would (hopefully) encode all relevant information about the patient.
 
-Mathematically, we can view this translator as a collection of an encoder, $F$, which takes us from the ambient space to the latent space, $F: \mathfrak{X}_{mvt,1} \mapsto \mathfrak{Z}$, and a decoder, $G$ which takes us from the latent space back to our ambient space, $G: \mathfrak{Z} \mapsto \mathfrak{X}_{mvt,2}$. The encoder-decoder architecture is a design decision outside the scope of this dissertation, but common choices include Variational Autoencoder (VAE) and Transformer-based networks \cite{vaswaniAttentionAllYou2017}.
-However, we can generally say that our encoder architecture is parametrized by some collection of variables, $\phi$, and our decoder parametrized by $\theta$.
-And so, notationally, we can view this problem as minimizing the distance between $\xi_{\phi} = F_{\phi}\mu_{mvt}$ and $\xi$, as well as minimizing the distance between $\mu_{mvt,\theta} = G_{\theta}\xi_{\phi}$ and $\mu$.
+Mathematically, this translator can be viewed as a collection of an encoder, $F$, which transforms the ambient space into the latent space, $F: \mathfrak{X}_{mvt,1} \mapsto \mathfrak{Z}$, and a decoder, $G$ which transforms the latent space back to the ambient space, $G: \mathfrak{Z} \mapsto \mathfrak{X}_{mvt,2}$. The encoder-decoder architecture is a design decision outside the scope of this dissertation, but common choices include Variational Autoencoder (VAE) and Transformer-based networks \cite{vaswaniAttentionAllYou2017}.
+However, the encoder architecture is generally parametrized by some collection of variables, $\phi$, and our decoder parametrized by $\theta$.
+Notationally, this problem is expressed as minimizing the distance between $\xi_{\phi} = F_{\phi}\mu_{mvt}$ and $\xi$, as well as minimizing the distance between $\mu_{mvt,\theta} = G_{\theta}\xi_{\phi}$ and $\mu$.
 The specifics of the math are outside the scope of this dissertation, but for interested readers, I recommend reading Jong Le's Geometry of Deep Learning, Chapter 13 \cite{yeGeometryDeepLearning2022}, which discusses metrics on probability spaces, multiple forms of divergence, and the requisite geometric and statistical intuition behind how these types of architectures work.
 
 \subsection{A Kinematics Translator}
 The primary goal of a kinematics translator is to develop a sufficiently rich representation of a patient's latent kinematic space, $\mathfrak{Z}$, with the smallest possible number of images required.
-This is achieved by enabliung the ``translator'' to decude, for example, ``stair rise'' kinematics from ``walking'' kinematics without needing to explicitly measure ``walking'' kinematics.
+This is achieved by enabling the ``translator'' to decode, for example, ``stair rise'' kinematics from ``walking'' kinematics without needing to explicitly measure ``walking'' kinematics.
 This has obvious benefits if one is trying to reduce the clinical footprint of autonomous kinematics measurements.
 
 \subsubsection{Methods and data}
 The training data used to build this network would come from the same published studies used for training our segmentation neural network and validating our autonomous algorithm (\Cref{sec:jtml}).
-To start, kinematics were grouped by movement (e.g. walking, stair rise, lunge, etc.), and then we created ``translation pairs'' for different movements from each patients.
-We standardized all kinematics data using B-splines and interpolation so that each movement was represented with 100 points.
-These 100 points at each anatomic rotation/translation measurement can be thought of as a ``word'' in our translation paradigm, meaning that for any given translation task, we are translating six ``words'' into six ``words''.
-Each of these 6 kinematics measurements for movement one would be the input to our network, and the desired output are the six kinematics measurements from movement two.
+To start, kinematics were grouped by movement (e.g. walking, stair rise, lunge, etc.), and then ``translation pairs'' were created for different movements from each patient.
+All kinematics data were standardized to 100 points by using B-splines.
+These 100 points at each anatomic rotation/translation measurement can be thought of as a ``word'' in the translation paradigm such that for any given translation task, the goal is to translate six ``words'' into six different ``words''.
+Each of these 6 kinematics measurements for movement one would be the input to the network, and the desired output are the six kinematics measurements from movement two.
 With a sufficient amount of data, this would build up a rich representation of our latent space, $\mathfrak{Z}$, such that it can be directly sampled or analyzed to learn about the underlying kinematics of a patient.
 Unfortunately, a lack of standardization caused three major problems when performing this analysis: (1) Different groups calling the different movements the same thing, (2) Different groups using different movements, and (3) Different groups measuring kinematics at different and non-standard flexion angles.
 
@@ -41,7 +41,7 @@ Even with a brief literature search, one can find many examples of different gro
 The three most pernicious movements were ``squat'', ``lunge'', and ``deep knee bend''. ``Step Up'' also had inconsistencies in the height of the stair.
 Typically, research done by the same group was standardized, but between groups there was minor resemblance, but never quite the same exact movement.
 
-A lunge ranged between both feet on the floor, to a raised stair of variable height. The distance between the feet was typically not specified.
+A lunge ranged between both feet on the floor, to a raised stair of variable height. The distance between the feet was usually not specified.
 When images were shown, the width of the feet ranged from nearly back-toe touching front-heel, to a more standard lunge with at least a foot between the back foot and front foot.
 
 A squat typically involves both feet next to each other, and the participants bending down as far as they can.
