aspell spell checker

--- a/src/1-Intro/1-1_computer-vision-primer/image-formation-and-cameras.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-formation-and-cameras.tex
@@ -7,7 +7,7 @@ In practice, all operations are uniformly performed on all points.
 For clarity, the subsequent equations will illustrate the process using a single point of the object.
 
 The first step is describing the location and orientation of the object with respect to the camera.
-This rotation and translation can be captured using a single 3D homogenous transformation matrix (\cref{eq:4x4-homog-transformation}).
+This rotation and translation can be captured using a single 3D homogeneous transformation matrix (\cref{eq:4x4-homog-transformation}).
 
 \begin{equation}
     \tilde{\mathbf{p}}' = \begin{bmatrix}
