--- a/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
@@ -1,6 +1,6 @@
 Digital image processing is a field of computer vision that deals with the manipulation, analysis, and interpretation of digital images.
 It focuses on algorithms and techniques that extract meaningful information from images and enhance visual quality.
-These algorithms can be utilized to efficiently and autonomously extract information relevent to model-image registration.
+These algorithms can be utilized to efficiently and autonomously extract information relevant to model-image registration.
 
 \subsubsection{Filtering and convolution}
 \label{sec:filtering-convolution}
