--- a/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
+++ b/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
@@ -48,7 +48,7 @@ A key strength of this network type is its utilization of non-linear activation 
 A well-chosen activation function can greatly impact the network's performance and ability to achieve specific tasks.
 In binary classification contexts, sigmoid activation functions are often effective as output layers, constraining predictions between 0 and 1, interpretable as probabilities.
 Rectified linear unit (ReLU) functions frequently optimize hidden layer efficiency.
-When operating upon data following gaussian distributions, the hyperbolic tangent (tanh) activation can better match associated non-linearities.
+When operating upon data following Gaussian distributions, the hyperbolic tangent (tanh) activation can better match associated non-linearities.
 
 \begin{figure}[h!]
     \centering
