--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/pose-refinement.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/pose-refinement.tex
@@ -1,4 +1,4 @@
 % Talk about some of the limitations (needing to help the optimizer), and mention that most of them needed a human operator, but without an operator necessary, this should be pretty fire.
 
-When we are determining the final pose of the TKA implant, there are two features that need to be selected: (1) the objective function and (2) optimization routine. THe availability of the segmentation output from the High-Resolution Convolutional Neural Network and an inital pose estimate from Normalized Fourier Descriptors helps narrow the choices down.
+When we are determining the final pose of the TKA implant, there are two features that need to be selected: (1) the objective function and (2) optimization routine. The availability of the segmentation output from the High-Resolution Convolutional Neural Network and an initial pose estimate from Normalized Fourier Descriptors helps narrow the choices down.
 
