--- a/src/JTML/chX-jtml.tex
+++ b/src/JTML/chX-jtml.tex
@@ -56,7 +56,7 @@ Each neural network was trained on an NVIDIA A100 GPU for 30 epochs. The perform
 \begin{figure*}[h]
 	\centering
 	\includegraphics[width = 0.75\textwidth]{figs/jtml-paper/fig3-seglabels.png}
-	\caption[Representative flooroscopic images]{Some representative fluoroscopic images (a) with corresponding femoral (b) and tibial (c) ground-truth images created by flat-shaded projections of registered implant models.}
+	\caption[Representative fluoroscopic images]{Some representative fluoroscopic images (a) with corresponding femoral (b) and tibial (c) ground-truth images created by flat-shaded projections of registered implant models.}
 	\label{fig:seg-labels}
 \end{figure*}
 
