--- a/src/aim4-shape-sensitivity/new-metrics.tex
+++ b/src/aim4-shape-sensitivity/new-metrics.tex
@@ -57,7 +57,7 @@ Similar to the Mean Average Surface Distance, this metric also necessitates sub-
 \end{figure}
 
 The last is the Hausdorff Distance (\Cref{fig:HD}) \cite{huttenlocherMultiresolutionTechniqueComparing1993,felzenszwalbDistanceTransformsSampled2012,huttenlocherComparingImagesUsing1993}.
-The Hausdorff distance is the maximum distance from a point on one boundary to the nearest point on another boundary. Typically the Hausdorf distance for an entire countour is taken as the average of the Hausdorff distances for a series of sampled points on the target contour.
+The Hausdorff distance is the maximum distance from a point on one boundary to the nearest point on another boundary. Typically the Hausdorff distance for an entire contour is taken as the average of the Hausdorff distances for a series of sampled points on the target contour.
 Like the previous two, the Hamming distance requires sub-kernels for every sampled point, and so it is not feasible.
 
 
